--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,3 +1,18 @@
 FROM "{{ jenkins_docker_image }}"
 
+ARG DOCKER_GID
+
+USER root
+
+RUN curl -fsSL https://get.docker.com | sh
+
+RUN curl -L "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
+    chmod +x /usr/local/bin/docker-compose
+
+RUN groupdel docker || true && \
+    groupadd -g ${DOCKER_GID} docker && \
+    usermod -aG docker jenkins
+
+USER jenkins
+
 RUN jenkins-plugin-cli --plugins {% for plugin in jenkins_plugin_list %}{{ plugin }} {% endfor %}
